--- a/GIT Application/Styles/AppStyle.axaml
+++ b/GIT Application/Styles/AppStyle.axaml
@@ -6,7 +6,14 @@
         </Border>
     </Design.PreviewWith>
 
-	
-	
-    <!-- Add Styles Here -->
+	<Style Selector="Window">
+		<Setter Property="Background" Value="#313433"/>
+	</Style>
+	<Style Selector="Panel.GridSplitter">
+		<Setter Property="Background" Value="#141414"/>
+	</Style>
+	<Style Selector="MenuItem">
+		<Setter Property="Foreground" Value="White"/>
+		<Setter Property="VerticalAlignment" Value="Stretch"/>
+	</Style>
 </Styles>
