--- a/GIT Application/Views/MainWindow.axaml
+++ b/GIT Application/Views/MainWindow.axaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="600"
+		Width="800" Height="600"
         x:Class="GIT_Application.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/avalonia-logo.ico"
@@ -18,5 +19,27 @@
 	<Window.Styles>
 		<StyleInclude Source="avares://GIT Application/Styles/AppStyle.axaml"/>
 	</Window.Styles>
+
+	<Grid RowDefinitions="30 2 *" ColumnDefinitions="49 * 49" ShowGridLines="False">
+		<Menu Grid.Column="1" PointerPressed="Menu_PointerPressed">
+			<MenuItem Header="_Edit">
+				<MenuItem Header="_Exit"/>
+			</MenuItem>
+			<MenuItem Header="_File">
+
+			</MenuItem>
+			<MenuItem Header="_Repository">
+
+			</MenuItem>
+			<MenuItem Header="_Branch">
+
+			</MenuItem>
+		</Menu>
+		<Panel Grid.Row="1" Grid.ColumnSpan="3" Classes="GridSplitter"/>
+		<Grid>
+			
+		</Grid>
+	</Grid>
+	
 	
 </Window>
