--- a/GIT Application/Styles/AppStyle.axaml
+++ b/GIT Application/Styles/AppStyle.axaml
@@ -14,6 +14,22 @@
 	</Style>
 	<Style Selector="MenuItem">
 		<Setter Property="Foreground" Value="White"/>
+		<Setter Property="FontWeight" Value="SemiBold"/>
 		<Setter Property="VerticalAlignment" Value="Stretch"/>
+	</Style>
+	<Style Selector="TextBlock">
+		<Setter Property="FontWeight" Value="SemiBold"/>
+	</Style>
+	<Style Selector="TextBlock.Header">
+		<Setter Property="FontWeight" Value="SemiBold"/>
+		<Setter Property="FontSize" Value="24"/>
+		<Setter Property="TextAlignment" Value="Left"/>
+		<Setter Property="VerticalAlignment" Value="Bottom"/>
+		<Setter Property="Foreground" Value="White"/>
+	</Style>
+	<Style Selector="TextBlock.GrayFont">
+		<Setter Property="VerticalAlignment" Value="Center"/>
+		<Setter Property="Foreground" Value="#777777"/>
+		<Setter Property="FontWeight" Value="SemiBold"/>
 	</Style>
 </Styles>
