--- a/GIT Application/Views/MainWindow.axaml
+++ b/GIT Application/Views/MainWindow.axaml
@@ -20,7 +20,7 @@
 		<StyleInclude Source="avares://GIT Application/Styles/AppStyle.axaml"/>
 	</Window.Styles>
 
-	<Grid RowDefinitions="30 2 *" ColumnDefinitions="49 * 49" ShowGridLines="False">
+	<Grid RowDefinitions="30 2 .3* .1* * .1*" ColumnDefinitions="49 * 49" ShowGridLines="False">
 		<Menu Grid.Column="1" PointerPressed="Menu_PointerPressed">
 			<MenuItem Header="_Edit">
 				<MenuItem Header="_Exit"/>
@@ -36,10 +36,12 @@
 			</MenuItem>
 		</Menu>
 		<Panel Grid.Row="1" Grid.ColumnSpan="3" Classes="GridSplitter"/>
-		<Grid>
+		<TextBlock Classes="Header" Grid.Row="2" Grid.Column="1" Text="{Binding GreetingLangS}"/>
+		<TextBlock Classes="GrayFont" Grid.Row="3" Grid.Column="1" Text="{Binding GreetingAddRepoS}"/>
+		<Grid Grid.Row="4" Grid.Column="1" ColumnDefinitions="* 2 *" ShowGridLines="True">
+			
 			
 		</Grid>
 	</Grid>
-	
 	
 </Window>
