--- a/GIT Application/Styles/AppStyle.axaml
+++ b/GIT Application/Styles/AppStyle.axaml
@@ -9,14 +9,17 @@
 	<Style Selector="Window">
 		<Setter Property="Background" Value="#313433"/>
 	</Style>
+	
 	<Style Selector="Panel.GridSplitter">
 		<Setter Property="Background" Value="#141414"/>
 	</Style>
+	
 	<Style Selector="MenuItem">
 		<Setter Property="Foreground" Value="White"/>
 		<Setter Property="FontWeight" Value="SemiBold"/>
 		<Setter Property="VerticalAlignment" Value="Stretch"/>
 	</Style>
+	
 	<Style Selector="TextBlock">
 		<Setter Property="FontWeight" Value="SemiBold"/>
 	</Style>
@@ -31,5 +34,46 @@
 		<Setter Property="VerticalAlignment" Value="Center"/>
 		<Setter Property="Foreground" Value="#777777"/>
 		<Setter Property="FontWeight" Value="SemiBold"/>
+	</Style>
+	<Style Selector="TextBlock.FieldsFont">
+		<Setter Property="FontSize" Value="12"/>
+		<Setter Property="FontWeight" Value="Regular"/>
+		<Setter Property="Foreground" Value="White"/>
+	</Style>
+
+	<Style Selector="Button.Confirm">
+		<Setter Property="Foreground" Value="White"/>
+		<Setter Property="FontSize" Value="12"/>
+		<Setter Property="VerticalContentAlignment" Value="Center"/>
+		<Setter Property="HorizontalContentAlignment" Value="Center"/>
+		<Setter Property="HorizontalAlignment" Value="Right"/>
+	</Style>
+	<Style Selector="Button.Confirm /template/ ContentPresenter">
+		<Setter Property="CornerRadius" Value="20"/>
+		<Setter Property="Background" Value="#33BB49"/>
+	</Style>
+	<Style Selector="Button:pointerover.Confirm /template/ ContentPresenter">
+		<Setter Property="Background" Value="#209333"/>
+	</Style>
+
+	<Style Selector="Button.Cancel">
+		<Setter Property="Foreground" Value="White"/>
+		<Setter Property="FontSize" Value="12"/>
+		<Setter Property="VerticalContentAlignment" Value="Center"/>
+		<Setter Property="HorizontalContentAlignment" Value="Center"/>
+		<Setter Property="HorizontalAlignment" Value="Right"/>
+	</Style>
+	<Style Selector="Button.Cancel /template/ ContentPresenter">
+		<Setter Property="CornerRadius" Value="20"/>
+		<Setter Property="Background" Value="#EA504B"/>
+	</Style>
+	<Style Selector="Button:pointerover.Cancel /template/ ContentPresenter">
+		<Setter Property="Background" Value="#A8302C"/>
+	</Style>
+	
+	<Style Selector="TextBox">
+		<Setter Property="Background" Value="#424544"/>
+		<Setter Property="BorderThickness" Value="0"/>
+		<Setter Property="CornerRadius" Value="10"/>
 	</Style>
 </Styles>
