--- a/GIT Application/Styles/AppStyle.axaml
+++ b/GIT Application/Styles/AppStyle.axaml
@@ -9,6 +9,10 @@
 	<Style Selector="Window">
 		<Setter Property="Background" Value="#313433"/>
 	</Style>
+
+	<Style Selector="Grid.DefaultPage">
+		<Setter Property="Background" Value="#313433"/>
+	</Style>
 	
 	<Style Selector="Panel.GridSplitter">
 		<Setter Property="Background" Value="#141414"/>
